Minor cleanups, update README

--- a/HostFS/Makefile
+++ b/HostFS/Makefile
@@ -1,5 +1,3 @@
-all: OBJ/HOSTFS OBJ/UPURSFS OBJ/HOSTFSM
-
 OBJ/UPURSFS: upursfs.txt 6502src.txt compile_date
 	beebasm -i $< -o $@ -v > $@.log.txt
 
@@ -9,6 +7,8 @@ OBJ/HOSTFS: hostfs.txt 6502src.txt compile_date
 OBJ/HOSTFSM: hostfs_myelin.txt 6502src.txt compile_date
 	beebasm -i $< -o $@ -v > $@.log.txt
 
+all: OBJ/HOSTFS OBJ/UPURSFS OBJ/HOSTFSM
+
 compile_date: upursfs.txt 6502src.txt hostfs.txt hostfs_myelin.txt
 	(echo MACRO COMPILE_DATE ; echo "   EQUS \":`date +%Y%m%d-%H%M%S`\"" ; echo ENDMACRO ) > compile_date
 	grep EQUS compile_date
@@ -17,8 +17,7 @@ remake: OBJ/UPURSFS
 	rm compile_date
 	make $<
 
-
-.PHONY : check publish clean hostfs
+.PHONY : check publish clean
 
 clean:
 	/bin/rm -f OBJ/* compile_date
@@ -40,8 +39,3 @@ UPURSFS/UPURSFS.log.txt: OBJ/UPURSFS.log.txt
 
 UPURSFS/README.txt: README.txt
 	cp -a $< $@
-
-hostfs: all
-	cp OBJ/HOSTFS ~/hostfs/roms65
-	cp OBJ/HOSTFSM ~/hostfs/roms65
-	cp OBJ/UPURSFS ~/hostfs/roms65
